Fix fitness trend legend flickering on Ubuntu

--- a/plugin/app/src/app/fitness-trend/fitness-trend-graph/fitness-trend-graph.component.scss
+++ b/plugin/app/src/app/fitness-trend/fitness-trend-graph/fitness-trend-graph.component.scss
@@ -7,10 +7,6 @@
 	cursor: pointer;
 }
 
-.stressScore i, .restDay i {
-	font-size: 12px;
-}
-
 .fromToPeriod {
 	padding-top: 20px;
 }
